[package]
name = "reaction-roles"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tracing = "0.1.37"
poise = "0.6.1"
emojis = "0.6.4"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls"] }
chrono = "0.4.26"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.7"
env_logger = "0.11.6"
